# fastmcp-documentation

./: .gitignore  DEPLOYMENT_LEARNINGS.md  FASTMCP_ADVANCED_FEATURES.md  FASTMCP_CLI.md  FASTMCP_DEPLOYMENT.md  FASTMCP_INTEGRATIONS.md  FASTMCP_MIDDLEWARE.md  FASTMCP_PATTERNS.md  FASTMCP_TROUBLESHOOTING.md  README.md
complex-detail/: FASTMCP_TESTING.md  INFRASTRUCTURE.md  MONOREPO_STRATEGY.md  SELF_HOSTING.md
docs/: CASE_STUDY_SIMPRO_V2_UPGRADE.md  CLI.md  CLOUD_DEPLOYMENT.md  EXPERIMENTAL.md  FEATURES.md  GUIDE.md  INTEGRATIONS.md  MIGRATION_GUIDE_V2.md  OPENAPI_INTEGRATION.md  PATTERNS.md  PROXY.md  REFERENCE.md  TROUBLESHOOTING.md
modular_template/: .env.example  pyproject.toml
modular_template/src/handlers/: client_handlers.py
modular_template/src/prompts/: __init__.py  templates.py
modular_template/src/resources/: __init__.py  static.py
modular_template/src/shared/: __init__.py  utils.py
modular_template/src/tools/: advanced.py  api_tools.py  data_tools.py  utility_tools.py
project_template/: .env.example  README.md
templates/: .gitignore
templates/modular/: README.md  pyproject.toml
templates/modular/src/: server.py
templates/simple/: README.md  handlers.py  requirements.txt  server.py  server_advanced.py
templates/structured/: README.md  pyproject.toml
templates/structured/src/: server.py  utils.py
templates/structured/src/handlers/: __init__.py
templates/structured/src/resources/: dynamic.py  static.py
templates/structured/src/tools/: advanced.py  api_tools.py  data_tools.py  file_tools.py  utility_tools.py
(+12 files in other folders)
